Fixed visual issues when high contrast mode enabled.

--- a/src/scripts/OSFramework/OSUI/Pattern/Tabs/scss/_tabs.scss
+++ b/src/scripts/OSFramework/OSUI/Pattern/Tabs/scss/_tabs.scss
@@ -363,6 +363,51 @@
 	}
 }
 
+// OS HighContrast Enabled -------------------------------------------------------
+///
+.os-hight-contrast {
+	.osui-tabs__header__indicator {
+		display: none;
+	}
+
+	.osui-tabs__content-item {
+		position: relative;
+	}
+
+	.osui-tabs__header-item:focus,
+	.osui-tabs__content-item :focus {
+		outline: none;
+	}
+
+	.osui-tabs__header-item:focus:before,
+	.osui-tabs__header-item.osui-tabs--is-active:before,
+	.osui-tabs__content-item:focus:before,
+	.osui-tabs__content-item.osui-tabs--is-active:before {
+		border: 2px solid var(--color-focus-outer);
+		bottom: 0;
+		content: '';
+		display: block;
+		left: 0;
+		pointer-events: none;
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+
+	.osui-tabs__header-item:focus:before,
+	.osui-tabs__content-item:focus:before {
+		border-width: 4px;
+	}
+
+	.has-accessible-features .osui-tabs__content-item:focus:before,
+	.osui-tabs__content-item.osui-tabs--is-active:before {
+	}
+
+	.osui-tabs__content-item {
+		padding: var(--space-base);
+	}
+}
+
 // Issue on accordion in webkit
 .windows.chrome,
 .windows.edge,
